# MCGPU-PET

./: .gitignore  DEMO_GUIDE.md  MANIFEST.in  MCGPU-PET.x  MCGPU_PET_Educational_Demo.ipynb  MCGPU_PET_Phantom_Creation.ipynb  Makefile  NEMA_final_run.out  README.md  example_wrapper_usage.py  mcgpu_wrapper.py  pyproject.toml  setup.py  test_web_demo.py
mcgpu/: __init__.py  wrapper.py
recon_demo_legacy/PET-Recon/: README.md  bsrem_demo.py
recon_demo_legacy/PET-Recon/recon/: algorithms.py  analysis.py  system.py
sample_simulation/: MCGPU-PET.in  MCGPU-PET.x  MCGPU_PET.psf  MCGPU_PET.psf.raw  NEMA_IEC.in  NEMA_IEC.psf  NEMA_IEC_narrow.in
sample_simulation/scripts/: compare_energy_windows.py  generate_nema_phantom.py  reconstruct_nema.py  reconstruct_volume.py  visualize_results.py
sample_simulation/scripts/results_energy/: sf_stats.txt
tests/: test_integration.py  test_wrapper_unit.py
web_demo/: app.py
web_demo/static/css/: style.css
web_demo/static/js/: script.js
web_demo/templates/: index.html
