[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcgpu-pet"
version = "1.0.0"
description = "Python wrapper and package for MC-GPU-PET Simulator"
readme = "README.md"
authors = [
    {name = "Andreu Badal, Joaquin L. Herraiz, Alejandro Lopez-Montes"}
]
license = {text = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
    "numpy",
    "flask",
    "scikit-image"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
mcgpu = ["materials/*.gz", "MCGPU-PET.x"]

